# chromatic-cells

./: README.md  pyproject.toml
chromatic_cells/: __init__.py  genealogy.py  imaging.py  synthetic.py
examples/: blastocyst.py  blastospim.py  method_figure.py  microlumen_resolution.py  pipeline_explainer.py  void_demo.py
tests/: test_genealogy.py  test_imaging.py  test_resolution.py  test_synthetic.py
theory/: complexity.md  flip-handoff.md  measure_placeholder_cost.py  transposition-update.md
